# vasSAT

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
execs/: CMakeLists.txt  vasSAT.cpp
include/cxxopts/: cxxopts.hpp
include/vasSAT/: CNFFormula.hpp  CommonTypes.hpp  DAG.hpp  FileUtils.hpp  NNFFormula.hpp  Node.hpp  Solver.hpp
lib/vasSAT/: CMakeLists.txt  CNFFormula.cpp  DAG.cpp  FileUtils.cpp  NNFFormula.cpp  Node.cpp  Solver.cpp
tests/: test-nnf.sh  test-sat-easy.sh  test-sat-hard.sh  test-unsat-easy.sh  test-unsat-hard.sh
tests/NNF/: fuzzy_testcase_0.nnf  fuzzy_testcase_1.nnf  fuzzy_testcase_2.nnf  fuzzy_testcase_3.nnf  fuzzy_testcase_4.nnf  fuzzy_testcase_5.nnf  fuzzy_testcase_6.nnf  fuzzy_testcase_7.nnf  fuzzy_testcase_8.nnf  fuzzy_testcase_9.nnf
tests/UUF50.218.1000-UNSAT/: uuf50-01000.cnf
